# stocks

./: .gitignore  .mise.toml  .pre-commit-config.yaml  Makefile  Pulumi.dev.yaml  Pulumi.prod.yaml  README.md  app.py  pyproject.toml  requirements.txt  setup.py  template.json
docker/: Dockerfile  docker-compose.yaml  lambda  preserve-bins.txt  preserve-paths.txt
docker/java/: Dockerfile
docker/python/: Dockerfile
save_options/: __main__.py
save_options/runtime/trigger/: handler.py
scripts/: upload_lambda_layers.py
stacks/: save_options_policy.json
stacks/api/: __main__.py
stacks/thetadata/: Pulumi.yaml  __main__.py
static/: col_types.json  cols_types.csv  finbox_metrics.csv  options_tickers.json  sp500_tickers.json  td_options_cols.json
stocks/: account.py  orders.py  schwab.py  thetadata.py
stocks/auth/: main.py  refresh.py  totp_generator.py  urls.py
stocks/filter_cwlogs/: filter_cwlogs.py
stocks/utils/: _aws.py
stocks_cdk/: dst_change_lambda.py  ec2_stack.py  lambda_save_options.py  layer_stack.py  postgres_stack  s3_stack.py  sns_stack.py  stocks_cdk_stack.py  tdameritrade.py  vpc_stack.py
stocks_cdk/constructlib/: fargate_task_definition.py  iam_role.py  lambda_function.py  lambda_pattern.py  lambda_pipe.py  layer.py  sns_topic.py  sqs_queue.py
stocks_cdk/save_options/: lambda_save_options.py  static_vars.py  tdameritrade.py
tests/: testutils.py
tests/integration/: feeder_tickers_test.py
tests/unit/: test_cwlogs.py  test_dst_trigger.py  test_schwab.py  test_td_save_option.py  test_td_save_options.py
(+3 files in other folders)
