[tool.poetry]
name = "stocks"
version = "2.0.0"
description = "project to download stock option data"
authors = ["Lim Lee <lee.haklim@gmail.com>"]
readme = "README.md"
include = ["stocks/**/*"]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
awswrangler = "^3.7.3"
pandas = "^2.2.2"
pandas-market-calendars = "^4.4.0"
pulumi = "^3.113.3"
mypy-boto3 = {extras = ["lambda"], version = "^1.34.93"}
boto3 = "^1.34.93"
mypy-boto3-lambda = "^1.34.77"
mypy-boto3-ssm = "^1.34.91"
requests = "^2.31.0"
pyotp = "^2.9.0"
playwright = "^1.43.0"
playwright-stealth = "^1.0.6"
python-vipaccess = "^0.14.2"


[tool.poetry.group.dev.dependencies]
pulumi = "^3.112.0"
pulumi-aws = "^6.28.2"
pre-commit = "^3.7.0"
types-requests = "^2.31.0.20240406"
pytest = "^8.2.0"


[tool.poetry.group.notebook.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
